Changes in version 2.10.0
+ Added Sys.sleep to buggy CyREST steps in...
  - createNetworkFromDataFrames, #98
  - importNetworkFromFile
  - importNetworkFromNDEx
  - exportNetworkToNDEx
  - updateNetworkInNDEx
  - importFilters
  - create***Filter
  - applyFilter
  - updateStyleMapping
  - setVisualPropertyDefault
+ Bug fix #94: added base.url param
+ Overhauled error handling and messaging
Changes in version 2.8.0
+ New functions:
  - mergeNetworks
  - analyzeNetwork
+ Better messaging for...
  - App-related functions, like installApp
  - When style changes are applied to "default" style
Changes in version 2.6.x
+ Doc Fixes
  - Roxygen update and man pages
  - Fixes to unitTests
+ Bug Fixes
  - getSelectedNodes/Edges -- #82 fixed missing param in usage
  - added missing base.url args -- #88
Changes in version 2.6.0
+ New functions: 
  - createGroupByColumn
  - clearEdgeBends
  - getNodePosition
+ New parameter to return SUIDs for
  - getSelectedNodes
  - getSelectedEdges
+ Node and edge property values returned as named lists
+ Faster results for getting all node and edge property values, #78
+ More robust handling of file type in export functions
+ More robust handling of dataframes in createNetworkFromDataFrames
+ New support for loading list data
+ Doc Fixes
  - added Filters to Overview vignette
  - improved file type handling descriptions
Changes in version 2.4.4
+ Bug Fixes
  - filter functions -- #73 wrong params
Changes in version 2.4.3
+ Bug Fixes
  - import functions -- #62 fixed default directory
Changes in version 2.4.2
+ Bug Fixes
  - getEdgeInfo -- #61 missing function
Changes in version 2.4.1
+ Bug Fixes
  - getLayoutPropertyNames -- #59 fixed returned values
  - createNetworkFromIgraph -- #58 flatten list attributes to strings
Changes in version 2.4.0
+ New style setting functions
  - setEdgeFontFaceDefault
  - setEdgeFontFaceMapping
  - setEdgeFontSizeMapping
  - setEdgeLabelDefault
  - setEdgeLabelColorDefault
  - setEdgeLabelColorMapping