@@ -95,6 +95,7 @@ export(getCollectionList)
 export(getCollectionName)
 export(getCollectionNetworks)
 export(getCollectionSuid)
+export(getCurrentStyle)
 export(getDisabledApps)
 export(getEdgeColor)
 export(getEdgeCount)
