@@ -14,5 +14,5 @@ LaTeX: pdfLaTeX
 
 BuildType: Package
 PackageUseDevtools: Yes
-PackageInstallArgs: --no-multiarch --with-keep.source --no-build--vignettes
+PackageInstallArgs: --no-multiarch --with-keep.source
 PackageCheckArgs: --no-build--vignettes
