@@ -1,0 +1,28 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/Styles.R
+\name{getCurrentStyle}
+\alias{getCurrentStyle}
+\title{Get Current Style}
+\usage{
+getCurrentStyle(network = NULL, base.url = .defaultBaseUrl)
+}
+\arguments{
+\item{network}{(optional) Name or SUID of the network. Default is the "current" 
+network active in Cytoscape.}
+
+\item{base.url}{(optional) Ignore unless you need to specify a custom domain,
+port or version to connect to the CyREST API. Default is http://localhost:1234
+and the latest version of the CyREST API supported by this version of RCy3.}
+}
+\value{
+Name of style
+}
+\description{
+Get the current visual style applied to a network.
+}
+\examples{
+\donttest{
+getCurrentStyle()
+getCurrentStyle('myNetwork')
+}
+}
