@@ -1,4 +1,6 @@
 Changes in version 2.10.0
++ New functions:
+  - getCurrentStyle, #15
 + Added Sys.sleep to buggy CyREST steps in...
   - createNetworkFromDataFrames, #98
   - importNetworkFromFile
@@ -10,6 +12,8 @@ Changes in version 2.10.0
   - applyFilter
   - updateStyleMapping
   - setVisualPropertyDefault
++ Refactored getNetworkViewSuid
++ Handled special 404 cases in .cyError
 + Bug fix #94: added base.url param
 + Overhauled error handling and messaging
 Changes in version 2.8.0
